RESOLVED FIXED117814
ASSERT removing then adding a <track> element
https://bugs.webkit.org/show_bug.cgi?id=117814
Summary ASSERT removing then adding a <track> element
Eric Carlson
Reported 2013-06-19 17:21:01 PDT
It should be possible to remove a <track> from a <video> element and add it to back again.
Attachments
Proposed patch (5.45 KB, patch)
2013-06-19 17:30 PDT, Eric Carlson
no flags
Eric Carlson
Comment 1 2013-06-19 17:21:52 PDT
Radar WebKit Bug Importer
Comment 2 2013-06-19 17:22:29 PDT
Eric Carlson
Comment 3 2013-06-19 17:30:34 PDT
Created attachment 205045 [details] Proposed patch
WebKit Commit Bot
Comment 4 2013-06-20 13:14:28 PDT
Comment on attachment 205045 [details] Proposed patch Clearing flags on attachment: 205045 Committed r151796: <http://trac.webkit.org/changeset/151796>
WebKit Commit Bot
Comment 5 2013-06-20 13:14:30 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.