ASSERT removing then adding a <track> element https://bugs.webkit.org/show_bug.cgi?id=117814

Reviewed by Jer Noble.

Source/WebCore:

Test: media/track/add-and-remove-track.html

* html/HTMLTrackElement.cpp:
(WebCore::HTMLTrackElement::insertedInto): Always call ensureTrack before adding the track
    to the parent <video> element.
(WebCore::HTMLTrackElement::ensureTrack): Call m_track->setTrackElement() in case the
    parent was cleared after m_track was created.

* html/track/LoadableTextTrack.cpp:
(WebCore::LoadableTextTrack::setTrackElement): New, set m_trackElement.
* html/track/LoadableTextTrack.h:

LayoutTests:

* media/track/add-and-remove-track-expected.txt: Added.
* media/track/add-and-remove-track.html: Added.


Canonical link: https://commits.webkit.org/135981@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@151796 268f45cc-cd09-0410-ab3c-d52691b4dbfc